--- a/owner/owner-client/src/app/_components/order-card/order-card.component.css
+++ b/owner/owner-client/src/app/_components/order-card/order-card.component.css
@@ -8,10 +8,10 @@
 }
 
 .user-table-info {
-    flex: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  flex: 25%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 .description {
@@ -24,21 +24,18 @@
 }
 
 .details {
-    flex: 25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+  flex: 25%;
 }
 
 .details span {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .details-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
 }
 
 .btn-wrapper {
@@ -62,47 +59,71 @@
 }
 
 .user-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .username {
-    color: var(--primary);
-    font-size: 1.5rem;
+  color: var(--primary);
+  font-size: 1.5rem;
 }
 
 .username-info {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .table-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .table-name {
-    color: var(--primary);
+  color: var(--primary);
 }
 
 .user-table-divider {
-    margin: 0.5rem 0;
+  margin: 0.5rem 0;
+}
+
+.tab-wrapper {
+  padding-top: 0.5rem;
+}
+
+.menu-items-wrapper {
+  height: 5rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.menu-item-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 0.5rem;
+}
+
+.details-item-wrapper {
+    height: 5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 @media (max-width: 960px) {
-    .main-wrapper {
-        flex-direction: column;
-        gap: 1rem;
-    }
+  .main-wrapper {
+    flex-direction: column;
+    gap: 1rem;
+  }
 
-    .btn-wrapper {
-        gap: 0.5rem;
-    }
+  .btn-wrapper {
+    gap: 0.5rem;
+  }
 
-    .details {
-        gap: 0.5rem;
-    }
+  .details {
+    gap: 0.5rem;
+  }
 }
