--- a/owner/owner-client/src/app/_layouts/orders/orders.component.html
+++ b/owner/owner-client/src/app/_layouts/orders/orders.component.html
@@ -1,5 +1,8 @@
 <div class="orders-wrapper">
-    <ng-container *ngFor="let order of orders">
-        <app-order-card [order]="order"></app-order-card>
-    </ng-container>
+  <ng-container *ngFor="let order of orders">
+    <app-order-card
+      [order]="order"
+      (decline)="onDecline($event)"
+    ></app-order-card>
+  </ng-container>
 </div>
