Added settings route

--- a/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.css
+++ b/owner/owner-client/src/app/_components/main-components/side-nav/side-nav.component.css
@@ -12,6 +12,11 @@
   width: 20px;
 }
 
+.side-nav-item-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
 @media only screen and (max-width: 960px) {
   .logo-wrapper {
     display: none;
