Can change activity of menu

--- a/owner/owner-client/src/app/_layouts/menus/menus-create/menus-create.component.css
+++ b/owner/owner-client/src/app/_layouts/menus/menus-create/menus-create.component.css
@@ -1,9 +1,19 @@
 .form-wrapper {
-    display: flex;
-    flex-direction: column;
-    width: 30rem;
+  display: flex;
+  flex-direction: column;
+  width: 30rem;
 }
 
 .btn-wrapper > button {
-    width: 100%;
+  width: 100%;
+}
+
+.two-col {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.toggle-wrapper {
+    margin-bottom: 1rem;
 }
