--- a/owner/owner-client/src/app/_layouts/menus/menus-edit/menus-edit.component.css
+++ b/owner/owner-client/src/app/_layouts/menus/menus-edit/menus-edit.component.css
@@ -7,3 +7,13 @@
 .btn-wrapper > button {
     width: 100%;
 }
+
+.two-col {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+}
+
+.toggle-wrapper {
+    margin-bottom: 1rem;
+}
