--- a/owner/owner-client/src/app/_components/menu-card/menu-card.component.css
+++ b/owner/owner-client/src/app/_components/menu-card/menu-card.component.css
@@ -19,3 +19,11 @@
 .svg {
     margin-left: 0.5rem;
 }
+
+.toggle-off {
+    color: var(--warning);
+}
+
+.toggle-on {
+    color: var(--success);
+}
