--- a/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
+++ b/owner/owner-client/src/app/_components/main-components/top-nav/top-nav-buttons/top-nav-buttons.component.html
@@ -1,7 +1,9 @@
 <div class="main-wrapper">
   <app-message-btn></app-message-btn>
   <app-notification-btn></app-notification-btn>
-  <app-account-btn></app-account-btn>
+  <app-account-btn
+    (logout)="onLogOut()"
+  ></app-account-btn>
 </div>
 
 <div class="ss-wrapper">
@@ -31,7 +33,7 @@
     >
       <mat-icon>notifications</mat-icon>
     </button>
-    <button type="button" mat-icon-button color="primary">
+    <button type="button" mat-icon-button color="primary" (click)="onLogOut()">
       <mat-icon>logout</mat-icon>
     </button>
   </div>
