--- a/owner/owner-client/src/app/_layouts/login/login.component.html
+++ b/owner/owner-client/src/app/_layouts/login/login.component.html
@@ -28,6 +28,7 @@
         (click)="hide = !hide"
         [attr.aria-label]="'Hide password'"
         [attr.aria-pressed]="hide"
+        type="button"
       >
         <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
       </button>
