Getting restaurants from real server

--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-details/restaurants-details.component.html
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-details/restaurants-details.component.html
@@ -30,7 +30,7 @@
       </div>
       <mat-divider></mat-divider>
       <div class="table-row">
-        <span>Phone</span><span>{{ restaurant.phone }}</span>
+        <span>Phone</span><span>{{ restaurant.phoneNumber }}</span>
       </div>
       <mat-divider></mat-divider>
       <div class="table-row">
