--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.html
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-create/restaurants-create.component.html
@@ -5,24 +5,10 @@
             <input matInput placeholder="Enter restaurant name" formControlName="name">
         </mat-form-field>
 
-        <div class="two-col">
-            <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>Country</mat-label>
-                <mat-select formControlName="countryId">
-                  <mat-option *ngFor="let country of countries" [value]="country.id">
-                    {{ country.name }}
-                  </mat-option>
-                </mat-select>
-              </mat-form-field>
-            <mat-form-field appearance="outline" class="input-wrapper">
-                <mat-label>Postal Code</mat-label>
-                <input matInput placeholder="Enter restaurant postal code" formControlName="postalCode" zipCode>
-            </mat-form-field>
-        </div>
 
         <mat-form-field appearance="outline" class="input-wrapper">
             <mat-label>Phone</mat-label>
-            <input matInput placeholder="Enter restaurant phone number" formControlName="phone">
+            <input matInput placeholder="Enter restaurant phone number" formControlName="phoneNumber">
         </mat-form-field>
 
         <div class="two-col">
@@ -36,6 +22,11 @@
                 <input matInput placeholder="Enter restaurant address" formControlName="address">
             </mat-form-field>
         </div>
+
+        <mat-form-field appearance="outline" class="input-wrapper">
+            <mat-label>Postal Code</mat-label>
+            <input matInput placeholder="Enter restaurant postal code" formControlName="postalCode" zipCode>
+        </mat-form-field>
 
         <mat-form-field appearance="outline" class="input-wrapper">
             <mat-label>Facebook</mat-label>
@@ -60,19 +51,30 @@
 
         <mat-form-field class="input-wrapper" appearance="outline">
             <mat-label>Description</mat-label>
-            <textarea rows="8" matInput placeholder="Enter restaurant description"
+            <textarea rows="12" matInput placeholder="Enter restaurant description"
                 formControlName="description"></textarea>
         </mat-form-field>
 
 
-        <mat-form-field appearance="outline" class="input-wrapper">
-            <mat-label>Currencies</mat-label>
-            <mat-select formControlName="currencyId">
-              <mat-option *ngFor="let currency of currencies" [value]="currency.id">
-                {{ currency.name }}
-              </mat-option>
-            </mat-select>
-          </mat-form-field>
+        <div class="two-col">
+            <mat-form-field appearance="outline" class="input-wrapper">
+                <mat-label>Country</mat-label>
+                <mat-select formControlName="countryId">
+                  <mat-option *ngFor="let country of countries" [value]="country.id">
+                    {{ country.name }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+
+              <mat-form-field appearance="outline" class="input-wrapper">
+                <mat-label>Currencies</mat-label>
+                <mat-select formControlName="currencyId">
+                  <mat-option *ngFor="let currency of currencies" [value]="currency.id">
+                    {{ currency.name }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+        </div>
 
 
         <div class="slide-wrapper">
@@ -84,32 +86,14 @@
         </div>
 
         <div class="btn-wrapper">
-            <button type="button" mat-raised-button color="accent" class="btn-full" (click)="profileBtn.click()">
-                <mat-icon>image</mat-icon>
-                Add Profile Photo
-            </button>
-
-            <input type="file" style="display: none;" #profileBtn multiple="false" accept="image/*" (change)="uploadProfileImage($event)">
-
-            <button type="button" mat-raised-button color="accent" class="btn-full" (click)="imagesBtn.click()">
-                <mat-icon>photo_library</mat-icon>
-                Add Images
-            </button>
-
-            <input type="file" style="display: none;" #imagesBtn multiple="true" accept="image/*" (change)="uploadImages($event)">
 
             <button mat-raised-button color="primary" class="btn-full" [disabled]="restaurantForm.invalid">
                 <mat-icon>save</mat-icon>
                 Save
             </button>
+    
+
         </div>
 
     </div>
 </form>
-
-<div class="images-wrapper">
-    <app-image-with-delete [isMain]="true" [image]="profileImage" (deleteImage)="deleteProfileImage($event)"></app-image-with-delete>
-    <ng-container *ngFor="let image of otherImages">
-        <app-image-with-delete [image]="image" (deleteImage)="deleteOtherImage($event)"></app-image-with-delete>
-    </ng-container>
-</div>
