Working on updating restaurants

--- a/owner/owner-client/src/app/_layouts/restaurants/restaurants-edit/restaurants-edit.component.html
+++ b/owner/owner-client/src/app/_layouts/restaurants/restaurants-edit/restaurants-edit.component.html
@@ -29,7 +29,7 @@
       <input
         matInput
         placeholder="Enter restaurant phone"
-        formControlName="phone"
+        formControlName="phoneNumber"
       />
     </mat-form-field>
 
