--- a/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.css
+++ b/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.css
@@ -11,6 +11,7 @@
 .other-info {
     flex: 50%;
     padding: 1rem;
+    padding-bottom: 2.5rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -33,12 +34,16 @@
     margin: 1rem 0;
 }
 
-.save-btn-wrapper {
+.btn-wrapper {
     display: flex;
-    width: 100%;
     align-items: center;
-    justify-content: space-around
+    justify-content: center;
 }
+
+.btn-wrapper > button {
+    width: 100%;
+}
+
 
 @media (max-width: 960px) {
     .main-info,
@@ -56,18 +61,5 @@
         gap: 0;
     }
 
-    .save-btn-wrapper {
-        margin-top: 1rem;
-        flex-direction: column;
-        gap: 1rem;
-    }
-
-    .save-btn-wrapper button {
-        width: 100%;
-    }
-
-    .image-wrapper {
-        margin-top: 1rem;
-    }
 }
 
