Can update employee

--- a/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-overview/employees-details-overview.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-details/employees-details-overview/employees-details-overview.component.html
@@ -60,7 +60,7 @@
 
     <div class="info-row">
       <div>Phone</div>
-      <div>{{ employee.phone }}</div>
+      <div>{{ employee.phoneNumber }}</div>
     </div>
 
     <mat-divider></mat-divider>
