--- a/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.html
+++ b/owner/owner-client/src/app/_layouts/employees/employees-create/employees-create.component.html
@@ -66,7 +66,7 @@
       <input
         matInput
         placeholder="Enter employee phone number"
-        formControlName="phone"
+        formControlName="phoneNumber"
       />
     </mat-form-field>
 
