Working on editing menu

--- a/owner/owner-client/src/app/_layouts/menus/menus-create/menus-create.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menus-create/menus-create.component.html
@@ -17,7 +17,7 @@
     <div class="two-col">
       <mat-form-field appearance="outline">
         <mat-label>Restaurants</mat-label>
-        <mat-select formControlName="restaurant">
+        <mat-select formControlName="restaurantId">
           <mat-option
             *ngFor="let restaurant of restaurants"
             [value]="restaurant.id"
