--- a/owner/owner-client/src/app/_layouts/menus/menu-item-create/menu-item-create.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-create/menu-item-create.component.html
@@ -15,6 +15,7 @@
         <input
           matInput
           placeholder="Enter menu item price"
+          type="number"
           formControlName="price"
         />
       </mat-form-field>
@@ -59,13 +60,13 @@
         />
 
         <div class="toggle-wrapper">
-          <mat-slide-toggle color="primary" formControlName="active"
+          <mat-slide-toggle color="primary" formControlName="isActive"
             >Active</mat-slide-toggle
           >
           <mat-slide-toggle
             (click)="onSpecialOfferChange()"
             color="primary"
-            formControlName="specialOffer"
+            formControlName="hasSpecialOffer"
             >Special Offer</mat-slide-toggle
           >
         </div>
@@ -74,9 +75,10 @@
           <mat-label>Special Offer Price</mat-label>
           <input
             matInput
+            type="number"
             placeholder="Enter menu item special offer price"
             formControlName="specialOfferPrice"
-            [readonly]="!menuItemForm.get('specialOffer')?.value"
+            [readonly]="!menuItemForm.get('hasSpecialOffer')?.value"
           />
         </mat-form-field>
 
