--- a/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menus-details/menus-details.component.html
@@ -20,7 +20,7 @@
       <app-menu-item-list [menuItems]="menu.menuItems"></app-menu-item-list>
     </mat-tab>
     <mat-tab label="Create Menu Item">
-      <app-menu-item-create></app-menu-item-create>
+      <app-menu-item-create [menuId]="menuId"></app-menu-item-create>
     </mat-tab>
     <mat-tab label="Kalkulacije"> Content 3 </mat-tab>
   </mat-tab-group>
