--- a/owner/owner-client/src/app/_layouts/menus/menu-item-create/menu-item-create.component.css
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-create/menu-item-create.component.css
@@ -7,6 +7,9 @@
 .info {
   flex: 50%;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .permissions {
@@ -26,14 +29,10 @@
   justify-content: space-between;
 }
 
-.two-col-permissions {
-  justify-content: space-around;
-}
-
 .toggle-wrapper {
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 @media (max-width: 960px) {
@@ -59,6 +58,7 @@
     margin: 0.5rem;
     flex-direction: row;
     justify-content: space-around;
+    margin-bottom: 2.5rem;
   }
 
   .two-col {
