--- a/owner/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.html
+++ b/owner/owner-client/src/app/_layouts/menus/menu-item-details/menu-item-details.component.html
@@ -20,10 +20,10 @@
       <div class="row-wrapper">
         <div>Active</div>
         <div>
-          <mat-icon *ngIf="menuItem.active" style="color: var(--success)"
+          <mat-icon *ngIf="menuItem.isActive" style="color: var(--success)"
             >check_circle</mat-icon
           >
-          <mat-icon *ngIf="!menuItem.active" style="color: var(--warning)"
+          <mat-icon *ngIf="!menuItem.isActive" style="color: var(--warning)"
             >cancel</mat-icon
           >
         </div>
@@ -32,10 +32,10 @@
       <div class="row-wrapper">
         <div>Special Offer</div>
         <div>
-          <mat-icon *ngIf="menuItem.specialOffer" style="color: var(--success)"
+          <mat-icon *ngIf="menuItem.hasSpecialOffer" style="color: var(--success)"
             >check_circle</mat-icon
           >
-          <mat-icon *ngIf="!menuItem.specialOffer" style="color: var(--warning)"
+          <mat-icon *ngIf="!menuItem.hasSpecialOffer" style="color: var(--warning)"
             >cancel</mat-icon
           >
         </div>
